added cellphone camp

--- a/main.ui
+++ b/main.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1267</width>
+    <width>1548</width>
     <height>1003</height>
    </rect>
   </property>
@@ -14,20 +14,8 @@
    <string>QUINQUENIO</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <property name="leftMargin">
-     <number>0</number>
-    </property>
-    <property name="topMargin">
-     <number>0</number>
-    </property>
-    <property name="rightMargin">
-     <number>0</number>
-    </property>
-    <property name="bottomMargin">
-     <number>0</number>
-    </property>
-    <item>
+   <layout class="QGridLayout" name="gridLayout_12">
+    <item row="0" column="0">
      <widget class="QFrame" name="frame">
       <property name="maximumSize">
        <size>
@@ -171,7 +159,61 @@
       </layout>
      </widget>
     </item>
-    <item>
+    <item row="0" column="1" rowspan="2">
+     <widget class="QFrame" name="frame_6">
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>0</number>
+       </property>
+       <property name="bottomMargin">
+        <number>0</number>
+       </property>
+       <item>
+        <widget class="QLineEdit" name="tel1C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel2C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel3C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel4C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel5C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel6C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel7C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel8C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel9C"/>
+       </item>
+       <item>
+        <widget class="QLineEdit" name="tel10C"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item row="1" column="0">
      <widget class="QFrame" name="frame_2">
       <property name="frameShape">
        <enum>QFrame::StyledPanel</enum>
